<resources>
    <string name="app_name">Quản lý chi tiêu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="toolbar_title">Quản lý chi tiêu</string>
    <string name="title_spending_manage">Quản lý chi tiêu</string>
    <string name="menu_expense">Chi tiêu</string>
    <string name="menu_income">Thu nhập</string>
    <string name="menu_statistics">Thống kê</string>
    <string name="title_backup_and_restore">Dữ liệu</string>
    <string name="menu_backup">Sao lưu</string>
    <string name="menu_restore">Khôi phục</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="menu_user">Người dùng</string>
    <string name="menu_category_spending">Quản lý danh mục</string>
    <string name="currcency">Đơn vị tiền tệ</string>
    <string name="currcency_description">Lựa chọn đơn vị tiền tệ của bạn</string>
    <string name="reminder">Thông báo nhắc nhở</string>
    <string name="reminder_description">Nhắc bạn thêm các khoản thu, chi mỗi ngày</string>
    <string name="language">Ngôn ngữ</string>
    <string name="language_description">Lựa chọn ngôn ngữ của bạn</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="copy_success">Sao chép dữ liệu thành công</string>
    <string name="ad_title">Quảng cáo trong ứng dụng</string>
    <string name="ad_description">Xem quảng cáo để hỗ trợ chúng tôi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="categoty_name">Tên danh mục</string>
    <string name="date_time_sample">01-01-2020</string>
    <string name="note">Ghi chú</string>
    <string name="money_expense_sample">- 10.000 VNĐ</string>
    <string name="money_income_sample">+ 10.000 VNĐ</string>
    <string name="no_category">Không có danh mục</string>
    <string name="expense_title">Quản lí chi tiêu</string>
    <string name="income_title">Quản lí thu nhập</string>
    <string name="statistics_title">Thống kê</string>
    <string name="backup_title">Sao lưu</string>
    <string name="backup_and_restore_title">Sao lưu và khôi phục</string>
    <string name="restore_title">Khôi phục</string>
    <string name="user_title">Người dùng</string>
    <string name="add_expense_title">Thêm chi tiêu</string>
    <string name="add_income_title">Thêm thu nhập</string>
    <string name="caterogy_title">Quản lí danh mục</string>
    <string name="title_user_info">Thông tin người dùng</string>
    <string name="display_user_name_sample">Đinh Văn Cơ</string>
    <string name="user_sample">dinhco01</string>
    <string name="date_add_sample">01-01-2021</string>
    <string name="remove_user">Xóa người dùng</string>
    <string name="change_info">Chỉnh sửa thông tin</string>
    <string name="title_list_user">Danh sách người dùng</string>
    <string name="title_user_name">Tên đăng nhập: </string>
    <string name="title_date_add">Ngày thêm: </string>
    <string name="title_date_modify">Ngày sửa đổi: </string>
    <string name="no_user">Chưa có người dùng nào!</string>
    <string name="edit_user">Chỉnh sửa thông tin</string>
    <string name="user_info">Thông tin người dùng</string>
    <string name="avartar">Ảnh đại diện</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="user_display_name">Tên người dùng</string>
    <string name="email">Email</string>
    <string name="email_sample">1952293@gm.uit.edu.vn</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="add_user">Thêm người dùng</string>
    <string name="category_expense">Danh mục chi tiêu</string>
    <string name="category_income">Danh mục thu nhập</string>
    <string name="money_expense">Số tiền chi</string>
    <string name="money_income">Số tiền thu</string>
    <string name="date">Ngày tháng</string>
    <string name="time">Thời gian</string>
    <string name="unit_currency">VNĐ</string>
    <string name="default_language">Tiếng Việt</string>
    <string name="title_activity_settings2">Cài đặt</string>
    <string name="save_info">Lưu thông tin</string>
    <string name="register">Đăng ký</string>
    <string name="spending_manage_title_login">QUẢN LÝ CHI TIÊU</string>
    <string name="login_title_login">ĐĂNG NHẬP</string>
    <string name="username_login">Tên người dùng</string>
    <string name="password_login">Mật khẩu</string>
    <string name="add_user_avatar">Ảnh đại diện</string>
    <string name="add_user_display_name">Tên hiển thị</string>
    <string name="add_user_email">Thư điện tử</string>
    <string name="add_user_user_name">Tên đăng nhập</string>
    <string name="add_user_password">Nhập mật khẩu</string>
    <string name="add_user_confirm_password">Xác nhận mật khẩu</string>
    <string name="add_user_add_user">Thêm người dùng</string>
    <string name="add_user_displayname_sample">Nguyễn Văn A</string>
    <string name="add_user_email_sample">nguyenvana@gmail.com</string>
    <string name="add_user_username_sample">anguyen123</string>
    <string name="add_user_password_sample">******</string>
    <string name="detail_touch_to_close">Chạm vào đây để đóng</string>
    <string name="detail_title">THÔNG TIN CHI TIẾT</string>
    <string name="add_expense_dialog_title">THÊM KHOẢN CHI</string>
    <string name="add_expense_dialog_category">Danh mục chi tiêu</string>
    <string name="add_expense_income_dialog_time">Thời gian</string>
    <string name="add_expense_income_dialog_date">Ngày tháng</string>
    <string name="add_expense_dialog_money">Số tiền chi</string>
    <string name="add_expense_income_note">Ghi chú</string>
    <string name="add_income_dialog_title">THÊM KHOẢN THU</string>
    <string name="add_income_dialog_money">Số tiền thu</string>
    <string name="add_dialog_back">Trở lại</string>
    <string name="add_dialog_add">Thêm</string>
    <string name="add_income_dialog_category">Danh mục thu nhập</string>
    <string name="edit_expense_dialog_title">CHỈNH SỬA KHOẢN CHI</string>
    <string name="edit_income_dialog_title">CHỈNH SỬA KHOẢN THU</string>
    <string name="edit_dialog_edit">Thay đổi</string>
    <string name="menu_bottom_option">TÙY CHỌN</string>
    <string name="menu_bottom_edit">Chỉnh sửa</string>
    <string name="menu_bottom_delete">Xóa</string>
    <string name="menu_bottom_close">Đóng</string>
    <string name="expense_question_delete">Bạn có muốn xóa khoản chi này không?</string>
    <string name="expense_income_cancel">Hủy bỏ</string>
    <string name="expense_income_confirm">Xác nhận</string>
    <string name="income_question_delete">Bạn có muốn xóa khoản thu này không?</string>
    <string name="expense_income_delete_success">Xóa thành công</string>
    <string name="warning_input_data_invalid">Dữ liệu nhập vào không hợp lệ!</string>
    <string name="notify_data_updated">Dữ liệu đã được cập nhật</string>
    <string name="notify_no_enter_money">Bạn chưa nhập số tiền!</string>
    <string name="statistics_data_title">DỮ LIỆU</string>
    <string name="statistics_category_title">THỐNG KÊ THEO TỪNG LOẠI</string>
    <string name="statistics_week_title">THỐNG KÊ THEO TUẦN</string>
    <string name="statistics_month_title">THỐNG KÊ THEO THÁNG</string>
    <string name="statistics_from_date">Từ ngày</string>
    <string name="statistics_to_date">Đến ngày</string>
    <string name="statistics_result">Kết quả</string>
    <string name="statistics_money_expense">Số tiền chi tiêu:</string>
    <string name="statistics_money_income">Số tiền thu nhập:</string>
    <string name="statistics_money_remaining">Số tiền còn lại:</string>
    <string name="statistics_select_type">Chọn loại</string>
    <string name="statistic_category">Danh mục</string>
    <string name="statistics_expense">Chi tiêu</string>
    <string name="statisctics_income">Thu nhập</string>
    <string name="statistics_start_date">Ngày bắt đầu</string>
    <string name="statistics_select_year">Chọn năm</string>
    <string name="statistic_month">tháng</string>
    <string name="statistics_display">Hiển thị</string>
    <string name="sunday">Chủ nhật</string>
    <string name="moday">Thứ 2</string>
    <string name="tuesday">Thứ 3</string>
    <string name="wednesday">Thứ 4</string>
    <string name="thursday">Thứ 5</string>
    <string name="friday">Thứ 6</string>
    <string name="saturday">Thứ 7</string>
    <string name="january">Tháng 1</string>
    <string name="february">Tháng 2</string>
    <string name="march">Tháng 3</string>
    <string name="april">Tháng 4</string>
    <string name="may">Tháng 5</string>
    <string name="june">Tháng 6</string>
    <string name="july">Tháng 7</string>
    <string name="august">Tháng 8</string>
    <string name="september">Tháng 9</string>
    <string name="october">Tháng 10</string>
    <string name="november">Tháng 11</string>
    <string name="december">Tháng 12</string>
    <string name="feb_mar">Tháng 2 - 3</string>
    <string name="apr_may">Tháng 4 - 5</string>
    <string name="jun_jul">Tháng 6 -7</string>
    <string name="aug_sep">Tháng 8 - 9</string>
    <string name="oct_nov">Tháng 10 - 11</string>
    <string name="statisctic_year">"Năm "</string>
    <string name="statistics_from">Từ</string>
    <string name="statistics_to">đến</string>
    <string name="user_total_expense">Tổng chi</string>
    <string name="user_total_income">Tổng thu</string>
    <string name="user_clear_data">Xóa dữ liệu</string>
    <string name="user_remove_account">Xóa tài khoản</string>
    <string name="user_information">THÔNG TIN NGƯỜI DÙNG</string>
    <string name="user_list">DANH SÁCH NGƯỜI DÙNG</string>
    <string name="user_welcomes">Chào mừng!</string>
    <string name="user_all_data_deleted">Tất cả dữ liệu đã được xóa</string>
    <string name="user_ok">Đồng ý</string>
    <string name="user_question_cleardata">Bạn có chắc chắn muốn xóa dữ liệu của mình không?</string>
    <string name="user_question_remove_account">Tất cả thông tin và dữ liệu người dùng sẽ bị xóa, bạn chắc chắn?</string>
    <string name="notify_remove_account_success">Xóa tài khoản thành công</string>
    <string name="user_user_info">THÔNG TIN NGƯỜI DÙNG</string>
    <string name="user_change_user">Đổi người dùng</string>
    <string name="user_edit_user">CHÍNH SỬA THÔNG TIN</string>
    <string name="user_change_password">Đổi mật khẩu</string>
    <string name="change_user_dialog_title">ĐỔI NGƯỜI DÙNG</string>
    <string name="change_user_dialog_login">Đăng nhập</string>
    <string name="changed_password_dialog_title">ĐỔI MẬT KHẨU</string>
    <string name="change_password_dialog_password_old">Nhập mật khẩu cũ</string>
    <string name="category_add_expense_category">THÊM LOẠI CHI</string>
    <string name="category_name_expense_category">Tên loại chi</string>
    <string name="category_name_expense_sample">Mua sắm</string>
    <string name="category_description_expense_sample">Số tiền dùng cho việc mua sắm</string>
    <string name="category_description">Mô tả</string>
    <string name="settings_laguage_description">Lựa chọn ngôn ngữ của bạn</string>
    <string name="settings_language">Ngôn ngữ</string>
    <string name="settings_notification_reminder">Thông báo nhắc nhở</string>
    <string name="settings_reminder_description">Nhắc bạn thêm các khoản thu nhập, chi tiêu mỗi ngày</string>
    <string name="settings_ad">Quảng cáo trong ứng dụng</string>
    <string name="settings_ad_description">Xem quảng cáo để hỗ trợ chúng tôi</string>
</resources>