<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_dialog"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/txtTitleDialog"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/category_add_expense_category"
        android:textColor="@color/grey_dam"
        android:textSize="20dp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/txtTitleCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/category_name_expense_category" />

        <EditText
            android:id="@+id/edtNameCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_edttext"
            android:drawableRight="@drawable/ic_baseline_category_24"
            android:drawableTint="@color/grey_dam"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:inputType="text"
            android:textSize="16dp"
            android:hint="@string/category_name_expense_sample"
            android:textColorHint="@android:color/darker_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:layout_weight="6"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/txtTitleDesciption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/category_description" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_edttext"
            android:drawableRight="@drawable/ic_baseline_note_24"
            android:drawableTint="@color/grey_dam"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:textSize="16dp"
            android:hint="@string/category_description_expense_sample"
            android:textColorHint="@android:color/darker_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnBack"
            android:background="@drawable/button_background"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/add_dialog_back"
            android:textColor="@color/colorTitle" />

        <Button
            android:id="@+id/btnAdd"
            android:background="@drawable/button_background"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/add_dialog_add"
            android:textColor="@color/colorTitle" />
    </LinearLayout>

</LinearLayout>